Revision history for Perl extension Lingua::Conjunction.

v2.2
	New Maintainer, thanks to RRWO and DAMIAN for the software
	Moving from DistZilla to MakeMaker

v2.1.4    2020-06-21 12:08:55+01:00 Europe/London
  [Documentation]
  - Fixed copyright year

  - Updated POD about languages supported.

v2.1.3    2020-06-21 11:59:57+01:00 Europe/London
  [Enhancements]
  - Add Indonesian (Ade Ishs)

  [Documentation]
  - Added INSTALL file to the distribution.

v2.1.2    2018-02-05 17:41:31+00:00 Europe/London
  [Documentation]
  - Fixed typo in POD, #1 (Mohammad S Anwar)

v2.1.1    2018-02-05 13:59:21+00:00 Europe/London
  [Tests]
  - Fixed failing test on Perl 5.8.

  [Documentation]
  - Removed Windows newlines from the Changes file.

v2.1.0    2018-01-28 21:38:27+00:00 Europe/London
  [Documentation]
  - Updated the format of the Changes file.
  - Updated the abstract and documentation.

  [Toolchain]
  - Reorganised files in the release to conform to modern standards.
  - Use Dist::Zilla and Pod::Weaver.
  - Use tuple version.

  [Other Changes]
  - Perltidied the source code.
  - Removed Windows line endings.

2.00 2003-11-16
  - Maintenance release; changed version to 2.00 after 4+ years.
  - Elaborated on more features in POD and added note about
    Perl Cookbook; fixed some typos
  - Minor code neating-up
  - Fixed penultimate rule in French (fr)
  - Added words for Afrikaans, Swahili, and Latin
  - Added rudimentary test script

1.99 1999-10-09
  - Renamed module to Lingua::Conjunction
  - Incorporated much code and suggestions from Damian Conway
  - Blank items in the list are now ignored
  - Added hooks to configure a language other than English
  - Added French, German, Italian, Portugese and Spanish

1.0 1999-10-05
  - Original version (released as Text::List and
    mislabelled as 0.01 in the Changes file)