@@ -3,6 +3,7 @@ Revision history for Perl extension Lingua::Conjunction.
 v2.2
 	New Maintainer, thanks to RRWO and DAMIAN for the software
 	Moving from DistZilla to MakeMaker
+	Try harder to use your language, rather than assuming 'en'
 
 v2.1.4    2020-06-21 12:08:55+01:00 Europe/London
   [Documentation]
